# nonlocal-composite-uFJC-scission-network-fracture

./: .gitignore  LICENSE  README.md  README.rst  fenics-virtual-environment-install-from-source-master.sh  setup.cfg
nonlocal_composite_ufjc_scission_network_fracture/: composite_ufjc_network.py  default_parameters.py  problem-backup.py  problem.py
nonlocal_composite_ufjc_scission_network_fracture-archive/: __init__.py  problem.py
nonlocal_composite_ufjc_scission_network_fracture-temporary-archive-optimization-problem/: composite_ufjc_network.py  default_parameters.py  problem.py  utility.py
notched-crack/: notched_crack-backup.py  notched_crack.py
notched-crack/two_dimensional_plane_strain_nearly_incompressible_nonaffine_eight_chain_model_equal_strain_rate_independent_notched_crack_problem/dissertation/g-trig-n_2/: notched_crack.py
notched-crack/two_dimensional_plane_strain_nearly_incompressible_nonaffine_eight_chain_model_equal_strain_rate_independent_notched_crack_problem/g-exp-n_10/: notched_crack.py  problem.py
notched-crack/two_dimensional_plane_strain_nearly_incompressible_nonaffine_eight_chain_model_equal_strain_rate_independent_notched_crack_problem/g-exp-n_2/: problem.py
notched-crack/two_dimensional_plane_strain_nearly_incompressible_nonaffine_eight_chain_model_equal_strain_rate_independent_notched_crack_problem/g-exp-n_5/: problem.py
notched-crack/two_dimensional_plane_strain_nearly_incompressible_nonaffine_eight_chain_model_equal_strain_rate_independent_notched_crack_problem/g-trig-n_10/: notched_crack.py  problem.py
notched-crack/two_dimensional_plane_strain_nearly_incompressible_nonaffine_eight_chain_model_equal_strain_rate_independent_notched_crack_problem/g-trig-n_2/: notched_crack.py
notched-crack/two_dimensional_plane_strain_nearly_incompressible_nonaffine_eight_chain_model_equal_strain_rate_independent_notched_crack_problem/g-trig-n_5/: notched_crack.py  problem.py
refined-notched-crack/: refined_notched_crack-archive.py  refined_notched_crack.py
(+7 files in other folders)
