[metadata]
name = nonlocal_composite_ufjc_scission_network_fracture
version = attr: nonlocal_composite_ufjc_scission_network_fracture.__version__
url = https://github.com/jasonmulderrig/nonlocal-composite-uFJC-scission-network-fracture
author = Jason Mulderrig, Brandon Talamini, Nikolaos Bouklas
author_email = jpm445@cornell.edu, talamini1@llnl.gov, nb589@cornell.edu
maintainer = Jason Mulderrig
maintainer_email = jpm445@cornell.edu, mulderrig.jason@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
license = GNU General Public License v3 or later (GPLv3+)
license_files = 
    LICENSE
description = The Python package for the composite uFJC model in the context of non-local chain scission taking place in a polymer network undergoing fracture.
long_description = file: README.rst
keywords = ufjc, non-local chain scission, polymer network fracture, asymptotic matching, thermodynamics, statistical mechanics, chain extensibility, polymer chain scission, distorted bond potential, dissipated energy, fracture toughness

[options]
packages = find:
python_requires = >=3.5, <4
install_requires = 
    numpy==1.21.6
    fenics-fiat==2019.1.0
    fenics-dijitso==2019.1.0
    fenics-ufl==2019.1.0
    fenics-ffc==2019.1.0
    fenics-dolfin==2019.1.0
    mshr==2019.1.0
    composite-ufjc-scission-ufl-fenics==1.3.7

[options.extras_require]
plotting = matplotlib
meshing =
  gmsh
  meshio
  pygmsh
rest =
  pkgconfig
  ply
  pybind11

[options.packages.find]
exclude = 
    dijitso*
    dolfin*
    ffc*
    fiat*
    mshr*
    ufl*
